fix(style): fix `text-align: justified;` for posts in Chinese
A workaround just yet

--- a/_app/assets/_less/custom.less
+++ b/_app/assets/_less/custom.less
@@ -87,3 +87,13 @@
     letter-spacing: -.3em;
   }
 }
+
+// Posts with Asian characters
+[lang=zh],
+[lang=ja] {
+  text-align: start;
+
+  header {
+    text-align: start;
+  }
+}
